# poek

./: .gitignore  README.md  peek  poke  pyproject.toml  requirements.txt
poek/: peek.py  poke.py
